[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/particles/Death Particles.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/particles/SummonParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/enemies/EnemyBase.gd" type="Script" id=3]
[ext_resource path="res://asset/frames/skull.png" type="Texture" id=5]
[ext_resource path="res://src/actors/enemies/SightBox.gd" type="Script" id=6]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform bool white_out = false;
uniform bool frozen = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	if (white_out) {
		COLOR = vec4(1.0, 1.0, 1.0, previous_color.a);
	}
	else if (frozen) {
		float red = previous_color.r * 0.5;
		float green = previous_color.g * 0.8;
		float blue = previous_color.b * 1.0;
		float alpha = previous_color.a * 1.0;
		COLOR = vec4(red, green, blue, alpha);
	}
	else {
		COLOR = previous_color;
	}
}"

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/white_out = false
shader_param/frozen = false

[sub_resource type="Animation" id=2]
resource_name = "Iframes Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/white_out")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Iframes Stop"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/white_out")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("DeathSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 0.517632, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -18 ), Vector2( 0, -6 ), Vector2( 0, -8 ), Vector2( 0, -6 ), Vector2( 0, -7 ), Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="EnemyBase" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
playing = true

[node name="DeathSprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 5 )

[node name="Boundry" type="CollisionShape2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="HurtBox"]

[node name="SightBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightBox"]

[node name="FrozenTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="IframesTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="FreeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ShaderPlayer" type="AnimationPlayer" parent="."]
"anims/Iframes Start" = SubResource( 2 )
"anims/Iframes Stop" = SubResource( 3 )

[node name="DeathParticles" parent="." instance=ExtResource( 1 )]
visible = true

[node name="CastParticles" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 4 )
